增加Http资源获得的Http basic验证支持 完善Readme 调整gradle,支持部署到maven中央仓库

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
-GROUP=iaac4j.aliyun
-VERSION=1.0-SNAPSHOT
-NAME=ros
+GROUP=com.github.peterchen82
+VERSION=1.1
+NAME=iaac4j-aliyun-ros
+DESCRIPTION=aliyun ros api
