--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,35 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
 sourceCompatibility = 1.8
+
+def isReleaseBuild() {
+    return VERSION.contains("SNAPSHOT") == false
+}
+
+def getReleaseRepositoryUrl() {
+    return hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL
+            : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+}
+
+def getSnapshotRepositoryUrl() {
+    return hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL
+            : "https://oss.sonatype.org/content/repositories/snapshots/"
+}
+
+def getRepositoryUsername() {
+    return hasProperty('NEXUS_USERNAME') ? NEXUS_USERNAME : ""
+}
+
+def getRepositoryPassword() {
+    return hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ""
+}
+
 
 repositories {
     mavenLocal()
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-    maven { url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/' }
     mavenCentral()
 }
 
@@ -19,7 +42,72 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
-jar {
-    baseName = project.GROUP + "." + project.NAME
-    version = project.VERSION
+afterEvaluate { project ->
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+                pom.groupId = GROUP
+                pom.artifactId = NAME
+                pom.version = VERSION
+
+                repository(url: getReleaseRepositoryUrl()) {
+                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
+                }
+                snapshotRepository(url: getSnapshotRepositoryUrl()) {
+                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
+                }
+
+                pom.project {
+                    name NAME
+                    packaging 'jar'
+                    description DESCRIPTION
+                    url 'https://github.com/peterchen82/iaac4j.aliyun'
+
+                    scm {
+                        url 'scm:git@github.com:peterchen82/iaac4j.aliyun.git'
+                        connection 'scm:git@github.com:peterchen82/iaac4j.aliyun.git'
+                        developerConnection 'git@github.com:peterchen82/iaac4j.aliyun.git'
+                    }
+
+                    licenses {
+                        license {
+                            name 'The Apache Software License, Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                            distribution 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'peterchen82'
+                            name 'peterchen'
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+signing {
+    required {
+        isReleaseBuild()
+    }
+    sign configurations.archives
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives jar, javadocJar, sourcesJar
 }
